eat: Implement Advanced Search and Refactor CORS/Error Handling
Backend:
- Implemented CenterSpecification for dynamic filtering (search, type, urgency)
- Updated CenterService and CenterController with search endpoints
- Centralized CORS configuration in SecurityConfig
- Added GlobalExceptionHandler for consistent error responses
- Externalized CORS allowed origins to application.properties

Frontend:
- Refactored ListView.jsx to use server-side search with debounce
- Implemented urgency status filter UI
- Updated centerService.js with search method
- General UI improvements and component refactoring